5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1865_1645.log
== TEST (2019-07-04 10:02:49) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))

t= 0

for i in range(a):
	if (a>=2000):
		t=t+1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:03:21) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))

t= 0

for i in range(a):
	if (i>=2000):
		t=t+1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:04:37) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))

t= 0

for i in range(a):
	if a[i]>=2000
		t=t+1
print(t)
-- ERROR:
File "XXXX", line 7
    if a[i]>=2000
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:04:41) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))

t= 0

for i in range(a):
	if a[i]>=2000:
		t=t+1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:10:13) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
v=0
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		v=v+a[i]
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:10:56) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
v=0
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		v=v+a[i]
		t=t+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:11:05) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
v=0
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		v=v+a[i]
		t=t+1
print(v)
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:11:28) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
v=0
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
		
print(v)
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:11:37) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
v=0
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
		
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:15:13) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0
k=zeros(v,dtype=int)

for j in range(size(a)):
	if a[i]>=2000:
		v=i+1
		
print(v)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:18:40) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0
k=zeros(v,dtype=int)

for j in range(size(a)):
	if a[j]>=2000:
		v=v+1

		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:18:43) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0
k=zeros(v,dtype=int)

for j in range(size(a)):
	if a[j]>=2000:
		v=v+1
print(v)
		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:18:58) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0
k=zeros(v,dtype=int)

for j in range(size(a)):
	if a[j]<=2000:
		v=v+1
print(v)
		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:19:26) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0
k=zeros(v,dtype=int)

for j in range(size(a)):
	if a[j]<=2000:
		v=v+1
print(k)
		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:20:01) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0


for j in range(size(a)):
	if a[j]<=2000:
		v=v+1
		k=(zeros(v,dtype=int))
print(k)
		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:25:09) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0


for j in range(size(a)):
	if a[j]>=2000:
		j=j+1
		k=(zeros(v,dtype=int))
print(j)
		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:25:21) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0


for j in range(size(a)):
	if a[j]>=2000:
		j=j+1
		k=(zeros(v,dtype=int))
print(j)
		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:25:45) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0


for j in range(size(a)):
	if a[j]>=2000:
		j=j+1
		k=(zeros(j,dtype=int))
print(j)
		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:30:00) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0


for j in range(size(a)):
	if a[j]>=2000:
		v=j+v
		k=(zeros(j,dtype=int))
print(v)
		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:40:09) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0
b=zeros(v,dtype=int)
for j in range(size(a)):
	if (a>=2000):
		v=v[i]
print(v)

		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:40:26) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0
b=zeros(v,dtype=int)
for j in range(size(a)):
	if (a[i]>=2000):
		v=v[i]
print(v)

		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:41:11) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0
b=zeros(v,dtype=int)
for j in range(size(a)):
	if (a[j]>=2000):
		v=v[j]
print(v)

		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:41:19) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0

for j in range(size(a)):
	if (a[j]>=2000):
		v=v[j]
print(v)

		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:42:09) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0

for j in range(size(a)):
	if (a[j]>=2000):
		v=v[j]+1
print(v)

		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:42:17) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0

for j in range(size(a)):
	if (a[j]>=2000):
		v=v+1
print(v)

		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:43:56) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0

for j in range(size(a)):
	if (a[j]>=2000):
		v=j
print(v)

		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:44:16) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0

for j in range(size(a)):
	if (a[j]>=2000):
		print(j)
print(v)

		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:44:40) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0

for j in range(size(a)):
	if (a[j]>=2000):
		print(j)


		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:45:09) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0

for j in range(size(a)):
	if (a[j]>=2000):



		
		


-- ERROR:
File "XXXX", line 20
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:45:14) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0

for j in range(size(a)):
	if (a[j]>=2000):



		
		


-- ERROR:
File "XXXX", line 20
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:45:25) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0




		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:45:36) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0

for j in range(size(a)):
	if (a[j]>=2000):
		print(j)


		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:45:42) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0

for j in range(size(a)):
	if (a[j]>=2000):
		print(j)


		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:46:19) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0

for j in range(size(a)):
	if (a[j]>=2000):
		print(j)
b= zeros(j,dtype=int)
print(b)

		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:47:36) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0

for j in range(size(a)):
	if (a[j]>=2000):
		print(j)
		b= zeros(j,dtype=int)
print(b)

		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:48:01) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0

for j in range(size(a)):
	if (a[j]>=2000):
		print(j)
		v=v+1
		b= zeros(v,dtype=int)
print(b)

		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 10:48:35) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0

for j in range(size(a)):
	if (a[j]>=2000):
		print(j)
		v=v+1
		b= zeros(v,dtype=int)
print(b)

		
		


-- EXECUTION TIME:
1.13449
-- TEST CASE 1:
---- input:
[2000,1500,2100,1500,3000,3200,1205,1800]
---- correct output:
4
[0 2 4 5]
---- user output:
4
0
2
4
5
[0 0 0 0]
-- TEST CASE 2:
---- input:
[2000,1500,2100,1500,3000]
---- correct output:
3
[0 2 4]
---- user output:
3
0
2
4
[0 0 0]
-- TEST CASE 3:
---- input:
[2000,1500,1950,1555,1999,2050,2560,2851,1500,3000]
---- correct output:
5
[0 5 6 7 9]
---- user output:
5
0
5
6
7
9
[0 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:51:33) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0

for j in range(size(a)):
	if (a[j]>=2000):
		print(j)
		v=v+1
		b= zeros(v,dtype=int)
print(b)

		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:52:00) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0

for j in range(size(a)):
	if (a[j]>=2000):
		print(j)
		v=v+1
		b= zeros(v[j],dtype=int)
print(b)

		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:52:23) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0

for j in range(size(a)):
	if (a[j]>=2000):
		print(j)
		v=v+1
		b= zeros(v[j],dtype=int)
print(b)

		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:52:43) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0

for j in range(size(a)):
	if (a[j]>=2000):
		print(j)
		v=v+1
		b= zeros(v[j],dtype=float)
print(b)

		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:53:02) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0

for j in range(size(a)):
	if (a[j]>=2000):
		print(j)
		v=v+1
		b= zeros(v,dtype=int)
print(b)

		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:53:20) 
-- CODE:
from numpy import*
a= array(eval(input("digite o valor dos saques:")))
t= 0

for i in range(size(a)):
	if a[i]>=2000:
		t=t+1
print(t)

v=0

for j in range(size(a)):
	if (a[j]>=2000):
		print(j)
		v=v+1
b= zeros(v[j],dtype=int)
print(b)

		
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
